--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,29 +10,31 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require jquery-ui
+ *= require_tree .
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap_overrides";
 
-.panel {
-  margin-top: 20px;
-}
-
-.panel-heading {
-  background-color: #70929E !important
-}
-.panel-body {
-  background-color: #dde9ed;
-  // #259C52
-}
-
-.panel-title {
-  font-size: 18px;
-}
-
-.footer {
-  background-color: #259C52;
-}
+// .panel {
+//   margin-top: 20px;
+// }
+//
+// .panel-heading {
+//   background-color: #70929E !important
+// }
+// .panel-body {
+//   background-color: #dde9ed;
+//   // #259C52
+// }
+//
+// .panel-title {
+//   font-size: 18px;
+// }
+//
+// .footer {
+//   background-color: #259C52;
+// }
