--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -51,7 +51,16 @@
         <div class="panel panel-default">
 					<div class="panel-heading">Founders</div>
 					<div class="panel-body">
-            <%= button_to "Add Founder", new_founder_path, method: "get", form: {style: 'display:inline-block;'}, class: 'btn btn-primary'%>
+            <div class="col-md-4 align-right margin-top-lg">
+              <%= button_to "Add Founder", new_company_founder_path(company_id: @company.id), method: "get", form: {style: 'display:inline-block;'}, class: 'btn btn-primary'%>
+            </div>
+            <div class="col-md-8">
+              <% @founders.each do |founder| %>
+              <div class="col-md-6">
+                <h2><%= founder.full_name %>: <%= founder.title %></h2>
+              </div>
+              <% end %>
+            </div>
           </div>
 				</div>
 			</div>
@@ -65,4 +74,5 @@
 			</div>
 		</div>
 	</div>
+  <%= link_to "Back to Companies", companies_path, class: 'align-right' %>
 </div>
