--- a/app/views/founders/new.html.erb
+++ b/app/views/founders/new.html.erb
@@ -1,11 +1,11 @@
 <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
    <div class="panel-heading">
-     <h3 class="panel-title">Create a new founder</h3>
+     <h3 class="panel-title">Create a new company</h3>
    </div>
    <div class="panel-body">
      <div class="row">
        <div class="col-md-4">
-         <%= form_for @founder do |f| %>
+         <%= form_for [@company, @founder] do |f| %>
          <%= label_tag(:first_name, "First Name") %>
          <%= f.text_field :first_name, class: 'form-control', required: true %>
        </div>
@@ -14,7 +14,7 @@
          <%= f.text_field :last_name, class: 'form-control', required: true %>
        </div>
        <div class="col-md-4">
-         <%= label_tag(:title, "Title") %>
+         <%= label_tag(:title, "Title") %><br>
          <%= f.text_field :title, class: 'form-control', required: true %>
          <%= f.submit "Save", class: 'btn btn-primary align-right margin-top-sm' %>
        </div>
