--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
    <div class="panel-heading">
-     <h3 class="panel-title">Create a new company</h3>
+     <h3 class="panel-title">Edit <%= @company.name %></h3>
    </div>
    <div class="panel-body">
      <div class="row">
+       <%= form_for @company do |f| %>
        <div class="col-md-12">
-         <%= form_for @company do |f| %>
          <%= label_tag(:name, "Company Name") %>
          <%= f.text_field :name, class: 'form-control', required: true %>
        </div>
@@ -19,12 +19,12 @@
        </div>
        <div class="col-md-4">
          <%= label_tag(:name, "Founded Date") %><br>
-         <%= f.text_field :date_founded, class: 'form-control', id: 'date-founded' %>
+         <%= f.date_field :date_founded, value: @company.date_founded, class: 'datepicker form-control', id: 'date-founded', required: true %>
        </div>
        <div class="col-md-12">
          <%= label_tag(:description, "Description") %>
          <%= f.text_area :description, class: 'form-control', size: '60x12', required: true %>
-         <%= f.submit "Update", class: 'btn-primary align-right margin-top-sm' %>
+         <%= f.submit "Save", class: 'btn btn-primary align-right margin-top-sm' %>
        </div>
      </div>
      <% end %>
