--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -15,33 +15,7 @@
     <div class="col-md-10 col-centered col-md-offset-1 margin-top-lg">
       <%= @company.description %>
     </div>
-		<div class="panel-footer">
-			<div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <div class="panel panel-default">
-					<div class="panel-heading">Founders</div>
-					<div class="panel-body">
-            <div class="col-md-4 align-right margin-top-lg">
-              <%= button_to "Add Founder", new_company_founder_path(company_id: @company.id), method: "get", form: {style: 'display:inline-block;'}, class: 'btn btn-primary'%>
-            </div>
-            <div class="col-md-8">
-              <% @founders.each do |founder| %>
-              <div class="col-md-6">
-                <h2><%= founder.full_name %>: <%= founder.title %></h2>
-              </div>
-              <% end %>
-            </div>
-          </div>
-				</div>
-			</div>
-		</div>
-    <div class="panel-footer">
-			<div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <div class="panel panel-default">
-					<div class="panel-heading">Categories</div>
-					<div class="panel-body">bla bla</div>
-				</div>
-			</div>
-		</div>
-	</div>
+		<%= render "founders" %>
+    <%= render "tags" %>
   <%= link_to "Back to Companies", companies_path, class: 'align-right' %>
 </div>
