--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
     <div id="main-container" class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
+          <% flash.each do |key, value| %>
+            <div class="<%= flash_class(key) %>">
+              <%= value %>
+            </div>
+          <% end %>
           <%= yield %>
         </div>
       </div>
